# Zerox-Chat

./: .env.ci  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
zeroxchat/: manage.py
zeroxchat/zeroxchat/: asgi.py  settings.py  urls.py  wsgi.py
