[tool.poetry]
name = "Zerox Realtime Chat Application"
version = "0.01"
description = "This is a realtime chat application which runs over web socket and also takes help from redis to queue request"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
gunicorn = "^20.1.0"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
